# websrc/controllers/migrationNoSqlHandlers.go
@@ -24,6 +24,7 @@ import (
 )
 
 // MigrationDynamoDBToFirestorePostHandler godoc
+// @ID MigrationDynamoDBToFirestorePostHandler
 // @Summary Migrate data from DynamoDB to Firestore
 // @Description Migrate data stored in AWS DynamoDB to Google Cloud Firestore.
 // @Tags [Data Migration], [NRDBMS]
@@ -83,6 +84,7 @@ func MigrationDynamoDBToFirestorePostHandler(ctx echo.Context) error {
 }
 
 // MigrationDynamoDBToMongoDBPostHandler godoc
+// @ID MigrationDynamoDBToMongoDBPostHandler
 // @Summary Migrate data from DynamoDB to MongoDB
 // @Description Migrate data stored in AWS DynamoDB to Naver Cloud MongoDB.
 // @Tags [Data Migration], [NRDBMS]
@@ -142,6 +144,7 @@ func MigrationDynamoDBToMongoDBPostHandler(ctx echo.Context) error {
 }
 
 // MigrationFirestoreToDynamoDBPostHandler godoc
+// @ID MigrationFirestoreToDynamoDBPostHandler
 // @Summary Migrate data from Firestore to DynamoDB
 // @Description Migrate data stored in Google Cloud Firestore to AWS DynamoDB.
 // @Tags [Data Migration], [NRDBMS]
@@ -201,6 +204,7 @@ func MigrationFirestoreToDynamoDBPostHandler(ctx echo.Context) error {
 }
 
 // MigrationFirestoreToMongoDBPostHandler godoc
+// @ID MigrationFirestoreToMongoDBPostHandler
 // @Summary Migrate data from Firestore to MongoDB
 // @Description Migrate data stored in Google Cloud Firestore to Naver Cloud MongoDB.
 // @Tags [Data Migration], [NRDBMS]
@@ -260,6 +264,7 @@ func MigrationFirestoreToMongoDBPostHandler(ctx echo.Context) error {
 }
 
 // MigrationMongoDBToDynamoDBPostHandler godoc
+// @ID MigrationMongoDBToDynamoDBPostHandler
 // @Summary Migrate data from MongoDB to DynamoDB
 // @Description Migrate data stored in Naver Cloud MongoDB to AWS DynamoDB.
 // @Tags [Data Migration], [NRDBMS]
@@ -319,6 +324,7 @@ func MigrationMongoDBToDynamoDBPostHandler(ctx echo.Context) error {
 }
 
 // MigrationMongoDBToFirestorePostHandler godoc
+// @ID MigrationMongoDBToFirestorePostHandler
 // @Summary Migrate data from MongoDB to Firestore
 // @Description Migrate data stored in Naver Cloud MongoDB to Google Cloud Firestore.
 // @Tags [Data Migration], [NRDBMS]
